cabal-version: 2.4
name:          djan-world
version:       0.1.0.0
maintainer:    djanatyn@gmail.com
author:        Jonathan Strickland

library
    exposed-modules:  Djan.World
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>=4.15.1.0,
        blaze-html >=0.9.1 && <0.10,
        bytestring >=0.10.12 && <0.11,
        text >=1.2.5 && <1.3,
        dhall >=1.39.0 && <1.40,
        relude >=1.0.0 && <1.1,
        typed-process >=0.2.8 && <0.3

executable djan-world
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>=4.15.1.0,
        relude >=1.0.0 && <1.1,
        djan-world
