cabal-version: 2.4
name:          djan-world
version:       0.1.0.0
maintainer:    djanatyn@gmail.com
author:        Jonathan Strickland

library
    exposed-modules:  Djan.World
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>=4.15.0,
        relude ^>=1.0.0.1,
        blaze-html ^>=0.9.1.2,
        dhall ^>=1.41.1,
        typed-process ^>=0.2.8.0,
        co-log-core ^>=0.3.1.0

executable djan-world
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>=4.15.0,
        relude ^>=1.0.0.1,
        djan-world

test-suite test-djan-world
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: test
    build-depends:
        base ^>=4.15.0,
        relude ^>=1.0.0.1,
        blaze-html ^>=0.9.1.2,
        dhall ^>=1.41.1,
        typed-process ^>=0.2.8.0,
        tasty ^>=1.4.2.1,
        tasty-hunit ^>=0.10.0.3,
        tasty-golden ^>=2.3.5,
        co-log-core ^>=0.3.1.0,
        directory ^>=1.3.6.2,
        djan-world
